# testcase-creation-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Build_Plan.md  CLAUDE.md  README.md  check_llm.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  show_testcases.py  verify_all_phases.py  ws_demo_client.py
.github/workflows/: ci.yml
backend-ai/: Dockerfile
backend-ai/app/: main.py
backend-ai/app/agents/test_case_creation_langgraph/: __init__.py  agent.py  events.py  models.py  nodes.py  prompts.py  react.py  routing.py  settings.py  state.py
backend-ai/app/agents/test_case_creation_langgraph/tools/: __init__.py  analysis_tools.py  context_tools.py  coverage_tools.py  generation_tools.py  persistence_tools.py  review_tools.py  (+1 more)
backend-ai/app/api/: __init__.py  feedback.py  runs.py  schemas.py  webhooks.py
backend-ai/app/governance/: __init__.py  feature_flags.py  observability.py
backend-ai/app/improvement/: __init__.py  feedback.py  golden_stories.json  metrics.py  regression.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CoverageMap.tsx  PlanReviewModal.tsx  ResultView.tsx  ReviewReport.tsx  ScenarioList.tsx  TestCaseEditor.tsx  TestCaseTable.tsx  TraceTimeline.tsx
frontend/src/hooks/: useRunSocket.ts
frontend/src/screens/: NewRun.tsx  RunView.tsx
scripts/: build_regression_set.py
tests/: test_agent.py  test_phase456.py  test_service.py
(+5 files in other folders)
