[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-case-creation-langgraph"
version = "0.1.0"
description = "LangGraph agent that turns a user story + acceptance criteria into reviewed, coverage-aware test cases (L2 · Supervised)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QA Platform Team" }]
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langsmith>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "truststore>=0.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
]

[project.optional-dependencies]
integrations = ["neo4j", "pymongo"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
where = ["backend-ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
